Finish data collection

--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "7AR_SEgkmYDC"
       },
@@ -182,11 +182,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "8SooBUDWVIQK"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'c:\\\\Users\\\\nicla\\\\Dokument\\\\Coding projects\\\\training-malaria-detector\\\\jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -194,23 +205,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "EQ7j8jHhmYDD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You set a new current directory\n"
+          ]
+        }
+      ],
       "source": [
-        "os.chdir('/workspace/WalkthroughProject01')\n",
+        "os.chdir('../')\n",
         "print(\"You set a new current directory\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "b107Zs3TmYDD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'c:\\\\Users\\\\nicla\\\\Dokument\\\\Coding projects\\\\training-malaria-detector'"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "\n",
         "current_dir = os.getcwd()\n",
@@ -228,11 +258,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "zhrMBzbVvZi2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: kaggle==1.5.12 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.5.12)\n",
+            "Requirement already satisfied: six>=1.10 in c:\\users\\nicla\\appdata\\roaming\\python\\python312\\site-packages (from kaggle==1.5.12) (1.16.0)\n",
+            "Requirement already satisfied: certifi in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (2023.11.17)\n",
+            "Requirement already satisfied: python-dateutil in c:\\users\\nicla\\appdata\\roaming\\python\\python312\\site-packages (from kaggle==1.5.12) (2.8.2)\n",
+            "Requirement already satisfied: requests in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (2.31.0)\n",
+            "Requirement already satisfied: tqdm in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (4.66.4)\n",
+            "Requirement already satisfied: python-slugify in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (8.0.4)\n",
+            "Requirement already satisfied: urllib3 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (1.26.18)\n",
+            "Requirement already satisfied: text-unidecode>=1.3 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-slugify->kaggle==1.5.12) (1.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->kaggle==1.5.12) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->kaggle==1.5.12) (3.6)\n",
+            "Requirement already satisfied: colorama in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm->kaggle==1.5.12) (0.4.6)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "# install kaggle package\n",
         "%pip install kaggle==1.5.12"
@@ -258,14 +308,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "LVlh18YgbyEg"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
-        "! chmod 600 kaggle.json"
+        "os.system('icacls kaggle.json /grant %USERNAME%:F')"
       ]
     },
     {
@@ -298,14 +359,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "n3u49Wn7byHA"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading malaria-cell-classification.zip to inputs/malaria_dataset\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  0%|          | 0.00/135M [00:00<?, ?B/s]\n",
+            "  1%|          | 1.00M/135M [00:00<01:34, 1.48MB/s]\n",
+            "  2%|▏         | 3.00M/135M [00:00<00:32, 4.30MB/s]\n",
+            "  4%|▍         | 6.00M/135M [00:00<00:14, 9.06MB/s]\n",
+            "  7%|▋         | 10.0M/135M [00:01<00:08, 15.3MB/s]\n",
+            " 10%|█         | 14.0M/135M [00:01<00:06, 19.0MB/s]\n",
+            " 13%|█▎        | 18.0M/135M [00:01<00:05, 23.2MB/s]\n",
+            " 16%|█▌        | 21.0M/135M [00:01<00:06, 19.3MB/s]\n",
+            " 18%|█▊        | 24.0M/135M [00:01<00:05, 19.6MB/s]\n",
+            " 20%|██        | 27.0M/135M [00:01<00:05, 21.3MB/s]\n",
+            " 22%|██▏       | 30.0M/135M [00:01<00:04, 22.7MB/s]\n",
+            " 24%|██▍       | 33.0M/135M [00:02<00:04, 23.8MB/s]\n",
+            " 27%|██▋       | 36.0M/135M [00:02<00:04, 24.6MB/s]\n",
+            " 30%|██▉       | 40.0M/135M [00:02<00:03, 28.3MB/s]\n",
+            " 33%|███▎      | 44.0M/135M [00:02<00:03, 30.4MB/s]\n",
+            " 36%|███▌      | 48.0M/135M [00:02<00:02, 32.5MB/s]\n",
+            " 39%|███▊      | 52.0M/135M [00:02<00:04, 21.5MB/s]\n",
+            " 41%|████      | 55.0M/135M [00:03<00:03, 21.6MB/s]\n",
+            " 43%|████▎     | 58.0M/135M [00:03<00:03, 22.6MB/s]\n",
+            " 46%|████▌     | 62.0M/135M [00:03<00:02, 26.5MB/s]\n",
+            " 49%|████▉     | 66.0M/135M [00:03<00:02, 29.8MB/s]\n",
+            " 52%|█████▏    | 70.0M/135M [00:03<00:02, 32.5MB/s]\n",
+            " 55%|█████▍    | 74.0M/135M [00:03<00:01, 34.1MB/s]\n",
+            " 58%|█████▊    | 78.0M/135M [00:03<00:01, 32.1MB/s]\n",
+            " 61%|██████    | 82.0M/135M [00:03<00:01, 33.0MB/s]\n",
+            " 64%|██████▍   | 86.0M/135M [00:03<00:01, 30.8MB/s]\n",
+            " 67%|██████▋   | 90.0M/135M [00:04<00:01, 33.1MB/s]\n",
+            " 70%|██████▉   | 94.0M/135M [00:04<00:01, 29.3MB/s]\n",
+            " 73%|███████▎  | 98.0M/135M [00:04<00:01, 31.2MB/s]\n",
+            " 76%|███████▌  | 102M/135M [00:04<00:01, 26.4MB/s] \n",
+            " 79%|███████▊  | 106M/135M [00:04<00:01, 25.3MB/s]\n",
+            " 82%|████████▏ | 110M/135M [00:04<00:00, 27.8MB/s]\n",
+            " 85%|████████▍ | 114M/135M [00:05<00:00, 30.1MB/s]\n",
+            " 88%|████████▊ | 118M/135M [00:05<00:00, 31.3MB/s]\n",
+            " 90%|█████████ | 122M/135M [00:05<00:00, 29.3MB/s]\n",
+            " 93%|█████████▎| 126M/135M [00:05<00:00, 31.2MB/s]\n",
+            " 96%|█████████▋| 130M/135M [00:05<00:00, 32.4MB/s]\n",
+            " 99%|█████████▉| 134M/135M [00:05<00:00, 33.9MB/s]\n",
+            "100%|██████████| 135M/135M [00:05<00:00, 24.9MB/s]\n"
+          ]
+        }
+      ],
       "source": [
-        "KaggleDatasetPath = \"\"\n",
-        "DestinationFolder = \"inputs/malaria_dataset\"   \n",
+        "KaggleDatasetPath = \"codeinstitute/malaria-cell-classification\"\n",
+        "DestinationFolder = \"inputs/malaria_dataset\"\n",
         "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
       ]
     },
@@ -320,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "4sJ4a1-RvZi9"
       },
@@ -380,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "tyxIhl1PvZi-"
       },
@@ -408,11 +524,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "r7GhG4y2vZi_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Folder: Parasitized - has image file 5643\n",
+            "Folder: Parasitized - has non-image file 0\n",
+            "Folder: Uninfected - has image file 5643\n",
+            "Folder: Uninfected - has non-image file 0\n"
+          ]
+        }
+      ],
       "source": [
         "remove_non_image_file(my_data_dir='inputs/malaria_dataset/cell_images')"
       ]
@@ -428,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "Qoz1ZU_EgKDu"
       },
@@ -500,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "24e-HbOdgYO1"
       },
@@ -562,7 +689,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.12.0"
     },
     "vscode": {
       "interpreter": {
