--- a/jupyter_notebooks/03 - Modelling and Evaluating.ipynb
+++ b/jupyter_notebooks/03 - Modelling and Evaluating.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {
         "id": "oqqga261_w4N"
       },
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {
         "id": "8SooBUDWVIQK"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "id": "EQ7j8jHhmYDD"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {
         "id": "b107Zs3TmYDD"
       },
@@ -148,10 +148,10 @@
         {
           "data": {
             "text/plain": [
-              "'c:\\\\Users\\\\nicla\\\\Dokument\\\\Coding projects\\\\training-malaria-detector'"
+              "'/workspace/training-malaria-detector-VS'"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "metadata": {
         "id": "5eucaA9M6qz1"
       },
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 9,
       "metadata": {
         "id": "ntzIpcxb3oIE"
       },
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -287,7 +287,7 @@
               "(129, 129, 3)"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1509,14 +1509,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The system cannot find the file specified.\n"
+            ".gitignore: not found\n"
           ]
         }
       ],
@@ -1535,7 +1535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -1548,12 +1548,10 @@
             "Changes not staged for commit:\n",
             "  (use \"git add <file>...\" to update what will be committed)\n",
             "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-            "\tmodified:   03 - Modelling and Evaluating.ipynb\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t../outputs/v1/class_indices.pkl\n",
-            "\t../outputs/v1/labels_distribution.png\n",
+            "\t\u001b[31mmodified:   ../.gitignore\u001b[m\n",
+            "\t\u001b[31mmodified:   01 - DataCollection.ipynb\u001b[m\n",
+            "\t\u001b[31mmodified:   03 - Modelling and Evaluating.ipynb\u001b[m\n",
+            "\t\u001b[31mmodified:   ../requirements.txt\u001b[m\n",
             "\n",
             "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
           ]
@@ -1574,17 +1572,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "warning: in the working copy of 'jupyter_notebooks/03 - Modelling and Evaluating.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!git add ."
       ]
@@ -1659,7 +1649,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.8.18"
     },
     "orig_nbformat": 2
   },
