--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -152,16 +152,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: '/workspace/WalkthroughProject01/requirements.txt'\u001b[0m\u001b[31m\n",
+            "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install -r /workspace/WalkthroughProject01/requirements.txt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "7AR_SEgkmYDC"
       },
@@ -182,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "8SooBUDWVIQK"
       },
@@ -190,10 +199,10 @@
         {
           "data": {
             "text/plain": [
-              "'c:\\\\Users\\\\nicla\\\\Dokument\\\\Coding projects\\\\training-malaria-detector\\\\jupyter_notebooks'"
+              "'/workspace/training-malaria-detector-VS/jupyter_notebooks'"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -205,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "EQ7j8jHhmYDD"
       },
@@ -225,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "b107Zs3TmYDD"
       },
@@ -233,10 +242,10 @@
         {
           "data": {
             "text/plain": [
-              "'c:\\\\Users\\\\nicla\\\\Dokument\\\\Coding projects\\\\training-malaria-detector'"
+              "'/workspace/training-malaria-detector-VS'"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -258,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "zhrMBzbVvZi2"
       },
@@ -267,18 +276,36 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: kaggle==1.5.12 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.5.12)\n",
-            "Requirement already satisfied: six>=1.10 in c:\\users\\nicla\\appdata\\roaming\\python\\python312\\site-packages (from kaggle==1.5.12) (1.16.0)\n",
-            "Requirement already satisfied: certifi in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (2023.11.17)\n",
-            "Requirement already satisfied: python-dateutil in c:\\users\\nicla\\appdata\\roaming\\python\\python312\\site-packages (from kaggle==1.5.12) (2.8.2)\n",
-            "Requirement already satisfied: requests in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (2.31.0)\n",
-            "Requirement already satisfied: tqdm in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (4.66.4)\n",
-            "Requirement already satisfied: python-slugify in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (8.0.4)\n",
-            "Requirement already satisfied: urllib3 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle==1.5.12) (1.26.18)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-slugify->kaggle==1.5.12) (1.3)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->kaggle==1.5.12) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->kaggle==1.5.12) (3.6)\n",
-            "Requirement already satisfied: colorama in c:\\users\\nicla\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm->kaggle==1.5.12) (0.4.6)\n",
+            "Collecting kaggle==1.5.12\n",
+            "  Downloading kaggle-1.5.12.tar.gz (58 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.0/59.0 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25hRequirement already satisfied: six>=1.10 in /workspace/.pip-modules/lib/python3.8/site-packages (from kaggle==1.5.12) (1.15.0)\n",
+            "Requirement already satisfied: certifi in /home/gitpod/.pyenv/versions/3.8.18/lib/python3.8/site-packages (from kaggle==1.5.12) (2024.6.2)\n",
+            "Requirement already satisfied: python-dateutil in /home/gitpod/.pyenv/versions/3.8.18/lib/python3.8/site-packages (from kaggle==1.5.12) (2.9.0.post0)\n",
+            "Requirement already satisfied: requests in /home/gitpod/.pyenv/versions/3.8.18/lib/python3.8/site-packages (from kaggle==1.5.12) (2.32.3)\n",
+            "Collecting tqdm (from kaggle==1.5.12)\n",
+            "  Downloading tqdm-4.66.4-py3-none-any.whl.metadata (57 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting python-slugify (from kaggle==1.5.12)\n",
+            "  Downloading python_slugify-8.0.4-py2.py3-none-any.whl.metadata (8.5 kB)\n",
+            "Requirement already satisfied: urllib3 in /home/gitpod/.pyenv/versions/3.8.18/lib/python3.8/site-packages (from kaggle==1.5.12) (2.2.2)\n",
+            "Collecting text-unidecode>=1.3 (from python-slugify->kaggle==1.5.12)\n",
+            "  Downloading text_unidecode-1.3-py2.py3-none-any.whl.metadata (2.4 kB)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /home/gitpod/.pyenv/versions/3.8.18/lib/python3.8/site-packages (from requests->kaggle==1.5.12) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /home/gitpod/.pyenv/versions/3.8.18/lib/python3.8/site-packages (from requests->kaggle==1.5.12) (3.7)\n",
+            "Downloading python_slugify-8.0.4-py2.py3-none-any.whl (10 kB)\n",
+            "Downloading tqdm-4.66.4-py3-none-any.whl (78 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.3/78.3 kB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.2/78.2 kB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: kaggle\n",
+            "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73025 sha256=3033562e53155c5552f5147410a6a6ec57c67ffcf2fb4237f4ead6664dc3534f\n",
+            "  Stored in directory: /home/gitpod/.cache/pip/wheels/29/da/11/144cc25aebdaeb4931b231e25fd34b394e6a5725cbb2f50106\n",
+            "Successfully built kaggle\n",
+            "Installing collected packages: text-unidecode, tqdm, python-slugify, kaggle\n",
+            "Successfully installed kaggle-1.5.12 python-slugify-8.0.4 text-unidecode-1.3 tqdm-4.66.4\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
@@ -308,25 +335,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "id": "LVlh18YgbyEg"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
-        "os.system('icacls kaggle.json /grant %USERNAME%:F')"
+        "! chmod 600 kaggle.json"
       ]
     },
     {
@@ -359,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {
         "id": "n3u49Wn7byHA"
       },
@@ -369,53 +385,8 @@
           "output_type": "stream",
           "text": [
             "Downloading malaria-cell-classification.zip to inputs/malaria_dataset\n",
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "  0%|          | 0.00/135M [00:00<?, ?B/s]\n",
-            "  1%|          | 1.00M/135M [00:00<01:34, 1.48MB/s]\n",
-            "  2%|▏         | 3.00M/135M [00:00<00:32, 4.30MB/s]\n",
-            "  4%|▍         | 6.00M/135M [00:00<00:14, 9.06MB/s]\n",
-            "  7%|▋         | 10.0M/135M [00:01<00:08, 15.3MB/s]\n",
-            " 10%|█         | 14.0M/135M [00:01<00:06, 19.0MB/s]\n",
-            " 13%|█▎        | 18.0M/135M [00:01<00:05, 23.2MB/s]\n",
-            " 16%|█▌        | 21.0M/135M [00:01<00:06, 19.3MB/s]\n",
-            " 18%|█▊        | 24.0M/135M [00:01<00:05, 19.6MB/s]\n",
-            " 20%|██        | 27.0M/135M [00:01<00:05, 21.3MB/s]\n",
-            " 22%|██▏       | 30.0M/135M [00:01<00:04, 22.7MB/s]\n",
-            " 24%|██▍       | 33.0M/135M [00:02<00:04, 23.8MB/s]\n",
-            " 27%|██▋       | 36.0M/135M [00:02<00:04, 24.6MB/s]\n",
-            " 30%|██▉       | 40.0M/135M [00:02<00:03, 28.3MB/s]\n",
-            " 33%|███▎      | 44.0M/135M [00:02<00:03, 30.4MB/s]\n",
-            " 36%|███▌      | 48.0M/135M [00:02<00:02, 32.5MB/s]\n",
-            " 39%|███▊      | 52.0M/135M [00:02<00:04, 21.5MB/s]\n",
-            " 41%|████      | 55.0M/135M [00:03<00:03, 21.6MB/s]\n",
-            " 43%|████▎     | 58.0M/135M [00:03<00:03, 22.6MB/s]\n",
-            " 46%|████▌     | 62.0M/135M [00:03<00:02, 26.5MB/s]\n",
-            " 49%|████▉     | 66.0M/135M [00:03<00:02, 29.8MB/s]\n",
-            " 52%|█████▏    | 70.0M/135M [00:03<00:02, 32.5MB/s]\n",
-            " 55%|█████▍    | 74.0M/135M [00:03<00:01, 34.1MB/s]\n",
-            " 58%|█████▊    | 78.0M/135M [00:03<00:01, 32.1MB/s]\n",
-            " 61%|██████    | 82.0M/135M [00:03<00:01, 33.0MB/s]\n",
-            " 64%|██████▍   | 86.0M/135M [00:03<00:01, 30.8MB/s]\n",
-            " 67%|██████▋   | 90.0M/135M [00:04<00:01, 33.1MB/s]\n",
-            " 70%|██████▉   | 94.0M/135M [00:04<00:01, 29.3MB/s]\n",
-            " 73%|███████▎  | 98.0M/135M [00:04<00:01, 31.2MB/s]\n",
-            " 76%|███████▌  | 102M/135M [00:04<00:01, 26.4MB/s] \n",
-            " 79%|███████▊  | 106M/135M [00:04<00:01, 25.3MB/s]\n",
-            " 82%|████████▏ | 110M/135M [00:04<00:00, 27.8MB/s]\n",
-            " 85%|████████▍ | 114M/135M [00:05<00:00, 30.1MB/s]\n",
-            " 88%|████████▊ | 118M/135M [00:05<00:00, 31.3MB/s]\n",
-            " 90%|█████████ | 122M/135M [00:05<00:00, 29.3MB/s]\n",
-            " 93%|█████████▎| 126M/135M [00:05<00:00, 31.2MB/s]\n",
-            " 96%|█████████▋| 130M/135M [00:05<00:00, 32.4MB/s]\n",
-            " 99%|█████████▉| 134M/135M [00:05<00:00, 33.9MB/s]\n",
-            "100%|██████████| 135M/135M [00:05<00:00, 24.9MB/s]\n"
+            " 98%|███████████████████████████████████████▏| 132M/135M [00:04<00:00, 34.3MB/s]\n",
+            "100%|████████████████████████████████████████| 135M/135M [00:04<00:00, 29.3MB/s]\n"
           ]
         }
       ],
@@ -436,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 10,
       "metadata": {
         "id": "4sJ4a1-RvZi9"
       },
@@ -496,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 11,
       "metadata": {
         "id": "tyxIhl1PvZi-"
       },
@@ -524,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 12,
       "metadata": {
         "id": "r7GhG4y2vZi_"
       },
@@ -555,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 15,
       "metadata": {
         "id": "Qoz1ZU_EgKDu"
       },
@@ -627,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 16,
       "metadata": {
         "id": "24e-HbOdgYO1"
       },
@@ -689,7 +660,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.0"
+      "version": "3.8.18"
     },
     "vscode": {
       "interpreter": {
